# cursed-archive

injest/: Cargo.toml  build.rs
injest/src/: main.rs  proto.rs
injest/src/services/: file_inject.rs  mod.rs
proto/: file_info.proto  inject.proto
server/: Cargo.toml  build.rs
server/src/: main.rs  proto.rs
