[package]
name = "injest"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.95"
async-stream = "0.3.6"
clap = { version = "4.5.20", features = ["derive"] }

futures = "0.3"
log = "0.4.25"
pretty_env_logger = "0.5.0"
prost = "0.13.4"
serde = { version = "1.0.217", features = ["derive"] }
tokio = { version = "1.43.0", features = ["macros", "rt-multi-thread", "fs"] }
tokio-stream = "0.1"
toml = "0.8.19"
tonic = "0.12.3"

[build-dependencies]
tonic-build = "0.12.3"
